# essa-rs

api/src/: c_api.rs  lib.rs  remote_result.rs
common/src/: lib.rs
function-executor/: Cargo.toml
function-executor/src/: deltalake.rs  main.rs  main2.rs  wasmtime.rs
r-executor/: Cargo.toml
r-executor/src/: main.rs
test-function/: Cargo.toml
test-function/src/: main.rs  shm.rs  shm_outliers.rs  shm_polinomios.rs
